kubernetes/darkstar/apps/downloads/sabnzbd/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app sabnzbd
  labels:
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: http
      port: &port 8081
      protocol: TCP
      targetPort: *port
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app sabnzbd
  labels:
    kubernetes.io/service-name: *app
addressType: IPv4
endpoints:
  - addresses:
      - 10.1.10.10
    conditions:
      ready: true
ports:
  - name: http
    port: 8081
