kubernetes/darkstar/apps/downloads/sabnzbd/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app sabnzbd
  labels:
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: ingress-nginx-int
  rules:
    - host: &host "sabnzbd.${SECRET_DOMAIN_PROXY}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
